compiler/tests/should-fail/MalleableEndorse.via
/* MalleableDowngradeError */

fun main() {
    val result: int = endorse 42 to {A} from {A->};
}
